--- a/jquery/modificandoHTML1.html
+++ b/jquery/modificandoHTML1.html
@@ -13,8 +13,38 @@
     <div id='conteudo1'></div>
     <div id='conteudo2'></div>
     <div id='conteudo3'></div>
+    <div>Div sem id</div>
 
     <script>
-        // ...
+        // Conteúdo 1
+        $('#conteudo1').append('<p>1</p>')
+
+        // Conteúdo 2
+        const elementos = [
+            $('<li></li>').append('Arroz'),
+            $('<li>').append('Feijão'),
+            $('<li>').append('Carne')
+        ]
+        const lista = $('<ul><li>Sorvete</li></ul>').prepend(elementos)
+        $('#conteudo2').append(lista)
+
+        // Conteúdo 3
+        $('#conteudo3').append('<h1>1</h1>', '<h1>2</h1>')
+                .append('<h1>3</h1>')
+                .prepend('<h1>4</h1>')
+                .append(['<h1>5</h1>', '<h1>6</h1>'])
+        
+        $('#conteudo3').html('<h1>123</h1>')
+        $('#conteudo3').text('<h1>123</h1>')
+        $('div[id]').html('<strong>Todos!</strong>')
     </script>
 </body>
+
+7:34
+$(elemento_jQuery).append(outro_elemento_jQuery) - Acrescenta elemento dentro de outro elemento, depois dos outros elementos ali já existentes.
+$(elemento_jQuery).prepend(outro_elemento_jQuery) - Acrescenta elemento dentro de outro elemento, antes dos outros elementos ali já existentes.
+$('<h1>Título</h1>') - Cria elemento jQuery.
+$(elemento_jQuery).html(conteúdo) - inclui conteúdo em elemento_jQuery.
+$(elemento_jQuery).text(texto) - inclui texto dentro de elemento_jQuery.
+
+
