--- a/jquery/selecionandoElementos2.html
+++ b/jquery/selecionandoElementos2.html
@@ -75,12 +75,36 @@
                 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <span>Dentro do span</span>
         </section>
     </main>
     <footer>
         <p>Cod3r Ensino</p>
     </footer>
     <script>
-        // ...
+        $(function(){
+            const comBorda = { 'border': 'solid 8px orange' }
+            const semBorda = { 'border': 'none' }
+
+            $('[href="#link3"]').parent().css(comBorda).css(semBorda)
+            $('li:last').prev().css(comBorda).css(semBorda)
+            $('[href="#link3"]').parent().next().css(comBorda).css(semBorda)
+            $('li:parent:nth-child(2)').css(comBorda).css(semBorda)
+            $('a[href="#link1"]').parents().css(comBorda).css(semBorda)
+            $('li:first').parentsUntil('body').css(comBorda).css(semBorda)
+            $('main').children().css(comBorda).css(semBorda) 
+            $('body').find('a').css(comBorda).css(semBorda)
+
+            const elementoDOM = document.getElementsByClassName('menu')
+            $(elementoDOM).css(comBorda).css(semBorda)
+        $('main').children().each((i, e)=> {
+            $(e).css(comBorda).css(semBorda)
+        })
+        $('li').each(function(i, e){
+            console.log($(e).html())
+            $(e).css(comBorda)
+        })
+            
+        })
     </script>
 </body>
